--- a/environment.yml
+++ b/environment.yml
@@ -5,6 +5,7 @@ dependencies:
     - pip=20.2.2
     - python=3.8.5
     - pip:
+        - black
         - ipywidgets
         - matplotlib==3.3.3
         - notebook==6.1.5
