--- a/environment.yml
+++ b/environment.yml
@@ -13,5 +13,6 @@ dependencies:
         - numpy==1.19.1
         - pandas==1.1.1
         - scipy
+        - seaborn
         - tqdm
         - warnings
